--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
         <h2>Projects</h2>
         <div class="slideshow-container">
 
-          <a href="http://127.0.0.1:5500/WebDashboardApp_Project7/Project7/index.html">
+          <a href="https://alekseynecha77.github.io/Project7/">
             <div class="mySlides">
               <div class="numbertext">1 / 6</div>
               <img src="img/P1.png" alt="First Project">
@@ -40,7 +40,7 @@
             </div>
           </a>
             
-          <a href="http://127.0.0.1:5500/PortfoliProject1/FinalTeamTreehouse-main/index.html">
+          <a href="https://alekseynecha77.github.io/First_TeamTreehouseProject/">
             <div class="mySlides">
               <div class="numbertext">2 / 6</div>
               <img src="img/P2.png" alt="Second Project">
@@ -48,7 +48,7 @@
             </div>
           </a>
             
-          <a href="http://127.0.0.1:5500/photo_gallery_Project5/Project5/index.html">
+          <a href="https://alekseynecha77.github.io/Project5/">
           <div class="mySlides">
               <div class="numbertext">3 / 6</div>
               <img src="img/P3.png" alt="Third Project">
@@ -56,7 +56,7 @@
             </div>
           </a>
 
-          <a href="http://127.0.0.1:5500/AnOnlineFormProject3/techdegree-project-3/index.html">
+          <a href="https://alekseynecha77.github.io/techdegree-project-3/">
           <div class="mySlides">
               <div class="numbertext">4 / 6</div>
               <img src="img/P4.png" alt="Fourth Project">
@@ -64,7 +64,7 @@
             </div>
           </a>
 
-          <a href="http://127.0.0.1:5500/Project2_responsiveLayout/FirstMediaQuery-Project2/firstlayoutwebsite/index.html">
+          <a href="https://alekseynecha77.github.io/Project2_ResponsiveLayout/">
             <div class="mySlides fade">
               <div class="numbertext">5 / 6</div>
               <img src="img/P5.png" alt="Fifth Project">
@@ -72,7 +72,7 @@
             </div>
           </a>
 
-          <a href="http://127.0.0.1:5500/game_show_app_Project6/Project6/index.html">
+          <a href="https://alekseynecha77.github.io/Project6/">
             <div class="mySlides">
               <div class="numbertext">6 / 6</div>
               <img src="img/P6.png" alt="Sixth Project">
