--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
 <!--  -->
-    <section>
+    <section class="mainPage">
         <div class="banner">
 
         <img src="img/desert.jpeg" id="desert" alt="picture of desert">
