--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
     <section class="message-and-settings">
         <div class="message">
-            <h2 id="text">Message User</h2>
+            <h2 id="text">Message Me</h2>
             <form class="widget-container" autocomplete="off">
         
             <input type="text" placeholder="Search for user" class="form-field" id="userField"  >
