--- a/projects.html
+++ b/projects.html
@@ -33,10 +33,12 @@
         <div class="slideshow-container">
 
           <a href="https://alekseynecha77.github.io/Project7/">
+
             <div class="mySlides">
+
               <div class="numbertext">1 / 7</div>
               <img src="img/P1.png" alt="First Project">
-              <div class="text">Caption Text</div>
+              <div class="text">Web App Dashboard</div>
             </div>
           </a>
             
@@ -44,7 +46,7 @@
             <div class="mySlides">
               <div class="numbertext">2 / 6</div>
               <img src="img/P2.png" alt="Second Project">
-              <div class="text">Caption Two</div>
+              <div class="text">Portfolio Webstie</div>
             </div>
          
           </a>
@@ -53,7 +55,7 @@
           <div class="mySlides">
               <div class="numbertext">3 / 7</div>
               <img src="img/P3.png" alt="Third Project">
-              <div class="text">Caption Three</div>
+              <div class="text">Photo Gallery</div>
             </div>
           </a>
 
@@ -61,7 +63,7 @@
           <div class="mySlides">
               <div class="numbertext">4 / 7</div>
               <img src="img/P4.png" alt="Fourth Project">
-              <div class="text">Caption Four</div>
+              <div class="text">Interactive Form Website</div>
             </div>
           </a>
 
@@ -69,7 +71,7 @@
             <div class="mySlides fade">
               <div class="numbertext">5 / 7</div>
               <img src="img/P5.png" alt="Fifth Project">
-              <div class="text">Caption Five</div>
+              <div class="text">Responsive Website</div>
             </div>
           </a>
 
@@ -77,13 +79,13 @@
             <div class="mySlides">
               <div class="numbertext">6 / 7</div>
               <img src="img/P6.png" alt="Sixth Project">
-              <div class="text">Caption Six </div>
+              <div class="text">Wheel Of Success Game </div>
             </div>
           </a>
           <a href="https://alekseynecha77.github.io/Project8/">
             <div class="mySlides">
               <div class="numbertext">7 / 7</div>
-              <img src="img/P8_EmployeeDirectory.png" alt="Sixth Project">
+              <img src="img/P8_EmployeeDirectory.png" alt="Sixth Project" class="changeable">
               <div class="text">Employee Directory using API </div>
             </div>
           </a>
