--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
           <a href="https://alekseynecha77.github.io/Project8/">
             <div class="mySlides">
               <div class="numbertext">7 / 7</div>
-              <img src="img/P8_EmployeeDirectory.png" alt="Sixth Project" class="changeable">
+              <img src="img/P8.png" alt="Sixth Project" class="changeable">
               <div class="text">Employee Directory using API </div>
             </div>
           </a>
