--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="timeline__component timeline__component--bg">
       <img src="img/js.png"/>
 
-      <h2 class="timeline__title">Make My First Photo Gallery Website</h2>
+      <h2 class="timeline__title">Make My First Photo Gallery Website using JS</h2>
       <p class="timeline__paragraph">
        //////////////////////
       </p>
@@ -102,9 +102,9 @@
       <div class="timeline__point"></div>
     </div>
     <div class="timeline__component timeline__component--bg">
-      <img src="img/jquery-logo-blue.png"/>
+      <img src="img/java-logo.png"/>
 
-      <h2 class="timeline__title">Faster Than Java</h2>
+      <h2 class="timeline__title">Currency Conversion Website using Java</h2>
       <p class="timeline__paragraph">
 /////
 
@@ -112,9 +112,9 @@
 </p>
     </div>
     <div class="timeline__component timeline__component--bottom timeline__component--bg">
-      <img src="img/java-logo.png"/>
+      <img src="img/jquery-logo-blue.png"/>
 
-      <h2 class="timeline__title">Currency Conversion Website</h2>
+      <h2 class="timeline__title">Currency Conversion Website using jQuery</h2>
       <p class="timeline__paragraph">
 ///////////////
 
