--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
       
       <h2 class="timeline__title">Make First Portfolio Website</h2>
       <p class="timeline__paragraph">
-///////////////
+        The first step for me was to learn HTML and CSS and later make portfolio project 
+        which will show all of the skills I learned.
       </p>
     </div>
 
@@ -82,7 +83,9 @@
 
       <h2 class="timeline__title">Make My First Photo Gallery Website using JS</h2>
       <p class="timeline__paragraph">
-       //////////////////////
+     Later I wanted to learn JS which was my main goal, because I saw many interactive website,
+     that looks just awesome. After I learn all the JS topics I needed to make interactive websites
+     So I made Photo Gallery which had search bar so the user can type and it will filter images
       </p>
       <p class="timeline__paragraph">
 //////////
@@ -106,8 +109,10 @@
 
       <h2 class="timeline__title">Currency Conversion Website using Java</h2>
       <p class="timeline__paragraph">
-/////
-
+        After all, I decided to learn Java becuase that was a part of my major in college.
+        My fingers were hurting because I had to learn so many topics from lectures and impliment it
+        For the final project I made Currency Conversion app, it didn't have any style because main goal was to create algorithm
+         At this moment, it was really complicated to me but I did it  
 
 </p>
     </div>
@@ -116,7 +121,9 @@
 
       <h2 class="timeline__title">Currency Conversion Website using jQuery</h2>
       <p class="timeline__paragraph">
-///////////////
+During Java language I had to write so many lines of code just for a basic app, so I decided
+to search if there are any frameworks, so I can write less lines of code. I found that there Java framework called
+jQuery, after learing this framework I decided to write Currency conversion app all in jQuery
 
       </p>
       <p class="timeline__paragraph">
