--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
       <h2 class="timeline__title">Currency Conversion Website using Java</h2>
       <p class="timeline__paragraph">
         After all, I decided to learn Java becuase that was a part of my major in college.
-        My fingers were hurting because I had to learn so many topics from lectures and impliment it
+        My fingers were hurting because I had to learn so many topics from lectures and impliment them.
         For the final project I made Currency Conversion app, it didn't have any style because main goal was to create algorithm
-         At this moment, it was really complicated to me but I did it  
+        It was really complicated to me, but I did it  
 
 </p>
     </div>
