--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body>
 
 
-
+  
 <!--  -->
+
     <nav class="navbar">
         <ul>
           <li><a href="index.html"><svg fill='white' xmlns="http://www.w3.org/2000/svg" height="48" width="48"><path d="M8 42V18L24.1 6 40 18v24H28.3V27.75h-8.65V42Zm3-3h5.65V24.75H31.3V39H37V19.5L24.1 9.75 11 19.5Zm13-14.65Z"/></svg></a></li>
@@ -32,8 +33,8 @@
         <img src="img/desert.jpeg" id="desert" alt="picture of desert">
 
         
-        <h2 id="text">Home</h2>
-        <h4 id="MYname">by Alex Nechaev</h4>
+        <h2 id="text" style="top: 90px;"class="home">Home</h2>
+        <h4 id="MYname" style="top: 90px;">by Alex Nechaev</h4>
 
         </div>
     </section>
