--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     </nav>
 
 
-    <section class="message-and-settings">
+    <section>
         <div class="message">
             <h2 id="text">Message Me</h2>
             <form class="widget-container" autocomplete="off">
