--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img src="img/desert.jpeg" id="desert" alt="picture of desert">
 
         
-        <h2 id="text" style="top: 90px;"class="home">Home</h2>
+        <h2 id="text" style="top: 90px;" class="home">Home</h2>
         <h4 id="MYname" style="top: 90px;">by Alex Nechaev</h4>
 
         </div>
@@ -69,7 +69,7 @@
     </div>
     <div class="timeline__component timeline__component--bg">
 
-      <img src="img/html-css-tutorials2.jpeg"/>
+      <img src="img/html-css-tutorials2.jpeg" alt="HTML and CSS image"/>
 
       
       <h2 class="timeline__title">Make First Portfolio Website</h2>
@@ -80,7 +80,7 @@
     </div>
 
     <div class="timeline__component timeline__component--bg">
-      <img src="img/js.png"/>
+      <img src="img/js.png" alt="JS icon"/>
 
       <h2 class="timeline__title">Make My First Photo Gallery Website using JS</h2>
       <p class="timeline__paragraph">
@@ -106,7 +106,7 @@
       <div class="timeline__point"></div>
     </div>
     <div class="timeline__component timeline__component--bg">
-      <img src="img/java-logo.png"/>
+      <img src="img/java-logo.png" alt="java icon"/>
 
       <h2 class="timeline__title">Currency Conversion Website using Java</h2>
       <p class="timeline__paragraph">
@@ -118,7 +118,7 @@
 </p>
     </div>
     <div class="timeline__component timeline__component--bottom timeline__component--bg">
-      <img src="img/jquery-logo-blue.png"/>
+      <img src="img/jquery-logo-blue.png" alt="jquery icon"/>
 
       <h2 class="timeline__title">Currency Conversion Website using jQuery</h2>
       <p class="timeline__paragraph">
