--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  </head>
 
 </head>
 
@@ -122,6 +123,7 @@
      
               <script src="js/onscroll.js"></script>
               <script src="js/project.js"></script>
+              <script src="js/navbar.js"></script>
 
 
 
