--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <img src="img/desert.jpeg" id="desert" alt="picture of desert">
 
         
-        <h2 id="text" style="top: 90px;" class="home">Home</h2>
-        <h4 id="MYname" style="top: 90px;">by Alex Nechaev</h4>
+        <h2 id="text" class="home">Home</h2>
+        <h4 id="MYname" >by Alex Nechaev</h4>
 
         </div>
     </section>
